adding github ci workflow

--- a/README
+++ b/README
@@ -1,2 +1,7 @@
+corsica-google-presentation
+----
+
+![Build Status](https://github.com/mythmon/corsica-google-presentation/actions/workflows/ci.yml/badge.svg)
+
 This is a Corsica plugin that scrapes Google presentation embed pages and
 slices them in various ways for Corsica displays.
